# stickyinc

./: .gitignore  LICENSE  README.md  SIGNING.md  package.json  pnpm-lock.yaml  smoke.mjs  smoke.sh
.github/: dependabot.yml
.github/workflows/: build.yml  claude.yml  pages.yml
landing/: demo.js  index.html  styles.css
pane/: index.html  package.json  pnpm-lock.yaml  quickadd.html  vite.config.ts  wizard.html
pane/src/: main.ts  quickadd.ts  style.css  wizard.css  wizard.ts
pane/src-tauri/: Cargo.toml  tauri.conf.json
pane/src-tauri/capabilities/: default.json
pane/src-tauri/icons/: icon.icns
pane/src-tauri/src/: lib.rs  main.rs  wizard.rs
src/: auth-cli.ts  db.ts  google.ts  index.ts  types.ts  watch-cli.ts  watcher.ts
src/providers/: anthropic.ts  claude_code.ts  codex.ts  gemini.ts  index.ts  local.ts  openai.ts  types.ts  which.ts
src/tools/: add_task.ts  add_task_natural.ts  complete_task.ts  list_done.ts  list_tasks.ts  schedule_event.ts
